Bug fix test - Invisible search button

--- a/public/styles/styling.css
+++ b/public/styles/styling.css
@@ -25,7 +25,7 @@ body {
 }
 
 .searchFieldFormPlaceLabel input {
-  width: 15em;
+  width: 13em;
   display: block;
   color: black;
   background-color: white;
@@ -35,9 +35,6 @@ body {
 }
 
 .searchFieldFormSubmitLabel {
-  position: absolute;
-  margin-left: 13.5em;
-  width: 2.5em;
   display: flex;
   justify-content: center;
   align-items: center;
